--- a/templates/bloghome.html
+++ b/templates/bloghome.html
@@ -1,11 +1,87 @@
-{% extends "template.html" %}
-{% block content %}
-{% for page in pages %}
-<a href="{{ page.path }}.html">
-    <h2>{{ page.title }}</h2>
-</a>
-<p>{{ page.description }}</p>
-<p>{{ page.date }}</p>
-<hr>
-{% endfor %}
-{% endblock %}
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
+    <style>
+        #posts{
+            width: 90%;
+            padding: 10%;
+        }
+        .card{
+            margin-top: 15px;
+        }
+    </style>
+</head>
+
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/about">About</a>
+                </li>
+        
+               
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+
+<br><br><br>
+    <center><h1>My Blog!</h1></center>
+
+
+    <div id="posts">
+            {% extends "template.html" %}
+            {% block content %}
+            {% for page in pages %}
+
+
+            <div class="card">
+                <div class="card-header">
+                    {{ page.date }}
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">{{ page.title }}</h5>
+                    <p class="card-text">{{ page.description }}</p>
+                    <a href="{{ page.path }}.html" class="btn btn-primary">Read More</a>
+                </div>
+            </div>
+            
+            {% endfor %}
+            {% endblock %}
+    </div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    
+</body>
+
+</html>
